# DocMind-AI

./: .gitignore  CMakeLists.txt  COURSE_DESIGN_DEMO.md  PLAN.md  README.md  code_example.md  python_list_test.md  test.md  开发日志.md
docs/: feedback-to-moduleB.md  interface-gaps-from-moduleC-to-moduleB.md  interface-gaps-from-moduleC.md  module-c-cmake-snippet.md
docs/archive/: README.md  user_test.md
resources/: app.rc  resources.qrc
resources/themes/: dark.css  light.css
src/: main.cpp
src/ai/: AIProvider.h  OpenAICompatibleProvider.cpp  OpenAICompatibleProvider.h  WritingAssistant.cpp  WritingAssistant.h
src/app/: Application.cpp  Application.h  DemoWindow.cpp  DemoWindow.h  MainWindow.cpp  MainWindow.h  SettingsDialog.cpp  SettingsDialog.h
src/conversion/: ConversionEngine.cpp  ConversionEngine.h  ConversionService.cpp  ConversionService.h  Diagnostics.cpp  Diagnostics.h  MarkdownParser.cpp  MarkdownParser.h  PandocConverter.cpp  PandocConverter.h  PopplerExtractor.cpp  PopplerExtractor.h  ProcessRunner.cpp  ProcessRunner.h  ResourceManager.cpp  ResourceManager.h  TectonicConverter.cpp  TectonicConverter.h  ToolRunner.cpp  ToolRunner.h  Types.cpp  Types.h
src/conversion/native/: NativeConversionService.cpp  NativeConversionService.h  NativeDocxConverter.cpp  NativeDocxConverter.h  NativeMarkdownConverter.cpp  NativeMarkdownConverter.h  NativePdfConverter.cpp  NativePdfConverter.h
src/core/: AppState.cpp  AppState.h  DocumentSession.cpp  DocumentSession.h
src/editor/: FindReplaceDialog.cpp  FindReplaceDialog.h  LineNumberArea.cpp  LineNumberArea.h  MarkdownEditor.cpp  MarkdownEditor.h  MarkdownHighlighter.cpp  MarkdownHighlighter.h
src/knowledge/: ChunkingStrategy.cpp  ChunkingStrategy.h  ConversionEngineExtractionAdapter.h  KnowledgeIngestionService.cpp  KnowledgeIngestionService.h  KnowledgeQueryService.cpp  KnowledgeQueryService.h  KnowledgeRepository.cpp  KnowledgeRepository.h  KnowledgeTypes.h
src/preview/: MarkdownRenderer.cpp  MarkdownRenderer.h  PreviewWidget.cpp  PreviewWidget.h  ScrollSyncManager.cpp  ScrollSyncManager.h
src/storage/: DbMigrator.cpp  DbMigrator.h  SecureCredentialStore.cpp  SecureCredentialStore.h  SettingsRepository.cpp  SettingsRepository.h
src/sync/: LocalOnlySyncProvider.h  SyncProvider.h
src/utils/: Logger.cpp  Logger.h
src/widgets/: TabManager.cpp  TabManager.h  ThemeManager.cpp  ThemeManager.h
